# multicam-viewer

./: .gitignore  CMakeLists.txt  README.md  pi-setup.json
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
lib/: CMakeLists.txt  mylib.cpp  mylib.hh
src/: CMakeLists.txt  main.cpp
src/pis/: CMakeLists.txt  main.cpp  main_pi.cpp
src/server/: CMakeLists.txt  main.cpp  main_server.cpp
tests/: CMakeLists.txt  test_mylib.cpp
